[package]
edition = "2021"
name = "esp-sign"
version = "0.1.0"

[[bin]]
name = "esp-sign"
path = "./src/bin/main.rs"

[dependencies]
defmt = "1.0.1"
embassy-net = { version = "0.7.1", features = [
  "defmt",
  "dhcpv4",
  "dhcpv4-hostname",
  "dns",
  "mdns",
  "medium-ethernet",
  "tcp",
  "udp",
] }
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
esp-alloc = "0.8.0"
esp-hal = { version = "1.0.0-rc.0", features = [
  "defmt",
  "esp32c3",
  "unstable",
] }
panic-rtt-target = { version = "0.2.0", features = ["defmt"] }
rtt-target = { version = "0.6.1", features = ["defmt"] }
smoltcp = { version = "0.12.0", default-features = false, features = [
  "medium-ethernet",
  "multicast",
  "proto-dhcpv4",
  "proto-dns",
  "proto-ipv4",
  "socket-dns",
  "socket-icmp",
  "socket-raw",
  "socket-tcp",
  "socket-udp",
] }
critical-section = "1.2.0"
embassy-executor = { version = "0.7.0", features = [
  "defmt",
  "task-arena-size-65536",
] }
embassy-time = { version = "0.4.0", features = ["generic-queue-8"] }
esp-hal-embassy = { version = "0.9.0", features = ["esp32c3"] }
esp-wifi = { version = "0.15.1", features = [
  "builtin-scheduler",
  "coex",
  "defmt",
  "esp-alloc",
  "esp32c3",
  "wifi",
] }
heapless = { version = "0.9.1", default-features = false, features = ["serde"] }
static_cell = { version = "2.1.1", features = ["nightly"] }
toml-cfg = "0.2.0"
esp-hal-smartled = { version = "0.15.0", features = ["defmt"] }
smart-leds = "0.4.0"
picoserve = { version = "0.16.0", features = ["defmt", "embassy"] }
serde = { version = "1.0.219", default-features = false, features = ["derive"] }
rgb = { version = "0.8.52", features = ["defmt-03", "serde"] }
embassy-sync = "0.7.2"
embassy-futures = "0.1.2"
hex = { version = "0.4.3", default-features = false }

[patch.crates-io]
esp-hal-smartled = { git = "https://github.com/esp-rs/esp-hal-community" }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
