[package]
edition = "2024"
name = "esp-sign"
rust-version = "1.88"
version = "0.1.0"

[[bin]]
name = "esp-sign"
path = "./src/bin/main.rs"
test = false

[[test]]
harness = false
name = "hello_test"

[lib]
test = false

[dependencies]
defmt = "1.0.1"
esp-bootloader-esp-idf = { version = "0.4.0", features = ["defmt", "esp32c3"] }
embassy-net = { version = "0.7.1", features = [
  "defmt",
  "dhcpv4",
  "dhcpv4-hostname",
  "dns",
  "mdns",
  "medium-ethernet",
  "tcp",
  "udp",
] }
embedded-io = { version = "0.7.1", features = ["defmt"] }
embedded-io-async = { version = "0.7.0", features = ["defmt"] }
esp-alloc = { version = "0.9.0", features = ["defmt"] }
esp-hal = { version = "1.0.0", features = ["defmt", "esp32c3", "unstable"] }
esp-rtos = { version = "0.2.0", features = [
  "defmt",
  "embassy",
  "esp-alloc",
  "esp-radio",
  "esp32c3",
] }

esp-radio = { version = "0.17.0", features = [
  "defmt",
  "esp-alloc",
  "esp32c3",
  "smoltcp",
  "unstable",
  "wifi",
] }
panic-rtt-target = { version = "0.2.0", features = ["defmt"] }
rtt-target = { version = "0.6.2", features = ["defmt"] }
smoltcp = { version = "0.12.0", default-features = false, features = [
  "defmt",
  "medium-ethernet",
  "multicast",
  "proto-dhcpv4",
  "proto-dns",
  "proto-ipv4",
  "socket-dns",
  "socket-icmp",
  "socket-raw",
  "socket-tcp",
  "socket-udp",
] }
critical-section = "1.2.0"
# for more networking protocol support see https://crates.io/crates/edge-net
embassy-executor = { version = "0.9.1", features = ["defmt"] }
embassy-time = { version = "0.5.0", features = ["defmt"] }
heapless = { version = "0.9.1", default-features = false, features = ["serde"] }
static_cell = { version = "2.1.1", features = ["nightly"] }
toml-cfg = "0.2.0"
esp-hal-smartled = { version = "0.17.0", features = ["defmt"] }
smart-leds = "0.4.0"
picoserve = { version = "0.16.0", features = ["defmt", "embassy"] }
serde = { version = "1.0.219", default-features = false, features = ["derive"] }
rgb = { version = "0.8.52", features = ["defmt-03", "serde"] }
embassy-sync = "0.7.2"
embassy-futures = "0.1.2"
hex = { version = "0.4.3", default-features = false }

[dev-dependencies]
embedded-test = { version = "0.7.0-alpha.3", git = "https://github.com/probe-rs/embedded-test", branch = "next", features = [
  "defmt",
  "embassy",
  "external-executor",
] }

[patch.crates-io]
esp-hal-smartled = { git = "https://github.com/esp-rs/esp-hal-community" }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
